--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -370,6 +370,25 @@ button{
   font-size: 1.25rem;
 }
 
+. button__glass{
+
+  content: '';
+
+  position: absolute;
+
+  bottom: -.75rem;
+
+  left: 45%;
+
+  width: 5px;
+
+  height: 5px;
+
+  background-color: var(--title-color);
+
+  border-radius: 5
+
+}
 .button--ghost{
   border: 2px solid;
   background-color: transparent;
